# cpp-usages

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cpp-learnings/: CMakeLists.txt  README.md
cpp-learnings/include/: README.md
cpp-learnings/libs/: README.md
cpp-learnings/libs/Windows/: mymath2.lib
cpp-learnings/src/: main.c  main.cpp
cpp-learnings/src/cppprimer/: CMakeLists.txt
cpp-learnings/src/cppprimer/include/CppPrimer/Domain/Geography/: Country.h
cpp-learnings/src/cppprimer/include/CppPrimer/SharedKernel/: Constants.h
cpp-learnings/src/cppprimer/include/CppPrimer/Utils/: utility_functions.h
cpp-learnings/src/cppprimer/src/: 01_01.cpp
cpp-learnings/src/cppprimer/src/CppPrimer/Domain/Geography/: Country.cpp
cpp-learnings/src/cprimerplus/: CMakeLists.txt
cpp-learnings/src/cprimerplus/src/: 01_01.c  02_01.c  02_02.c  03_01.c  04_01.c  05_01.c  05_02.c  05_03.c  06_01.c
cpp-learnings/src/cprimerplus/src/include/: constants.h  recursives.h
cpp-learnings/src/cprimerplus/src/internal/: recursives.c
cpp-learnings/src/includes/: MyClass.h  MyString.h
cpp-learnings/src/libs/mymath/: CMakeLists.txt
cpp-learnings/src/libs/mymath/src/: mymath.c
cpp-learnings/src/sources/: MyClass.cpp
libs/curl/: README.md
mymath2/: CMakeLists.txt  CMakePresets.json  README.md
mymath2/src/: mymath2.c
mymath2/src/internal/: README.md
src/: main.c
src/c17/: CMakeLists.txt
src/c17/include/: operation_registry.h
src/c17/include/data_structures/dictionary/: dict_insert.h  dict_types.h  dictionary.h
src/c17/include/module01_memory_alignment/: structs.h
src/c17/include/module02_data_structures/: demonstrate_data_structure_dictionary.h
src/c17/include/utils/: consts.h
src/c17/src/: main.c
src/c17/src/data_structures/dictionary/: dict_insert.c  dict_utils.c  dictionary.c
src/c17/src/module01_memory_alignment/: demonstrate_memory_alignment.c
src/c17/src/module02_data_structures/: demonstrate_data_structure_dictionary.c
src/c17/src/utils/: char_utils.c
src/cpp11/: CMakeLists.txt
src/cpp11/include/: operation_registry.h  utility_functions.h
src/cpp11/include/module01_range_for/: demonstrate_range_for.h
src/cpp11/include/module03_raii/: raii_string.h
src/cpp11/include/module04_constructor/: my_class.h
src/cpp11/include/module05_pointer/: demonstrate_pointer.h
src/cpp11/include/module06_namespace/: country.h  demonstrate_namespace.h
src/cpp11/include/module07_extern_c/: c_functions.h
src/cpp11/libs/include/: README.md
src/cpp11/libs/lib/Linux/: README.md
src/cpp11/libs/lib/Windows/: README.md
src/cpp11/src/: main.cpp
src/cpp11/src/module01_range_for/: demonstrate_range_for.cpp
src/cpp11/src/module02_left_right_value/: demonstrate_left_right_value.cpp
src/cpp11/src/module03_raii/: demonstrate_raii.cpp
src/cpp11/src/module04_constructor/: demonstrate_constructor.cpp  my_class.cpp
src/cpp11/src/module05_pointer/: demonstrate_pointer.cpp
src/cpp11/src/module06_namespace/: country.cpp  demonstrate_namespace.cpp
src/cpp11/src/module07_extern_c/: c_function.c  c_functions.c  demonstrate_extern_c.cpp
src/cpp11/src/module08_third_party/: demonstrate_third_party.cpp
src/cpp20/: CMakeLists.txt
src/cpp20/src/: main.cpp
src/cpp23/: CMakeLists.txt
src/cpp23/modules/math/: add.cppm  math.cppm  sub.cppm
src/cpp23/src/: main.cpp
src/learnings/: CMakeLists.txt
src/learnings/include/: operation_registry.h
src/learnings/include/c17/: operation_registry.h
src/learnings/include/c17/data_structures/dictionary/: dict_types.h  dict_utils.h
src/learnings/include/c17/feature_modules/module01_memory_alignment/: demonstrate_memory_alignment.h
src/learnings/include/c17/utils/: char_utils.h
src/learnings/include/cpp11/feature_modules/module02_left_right_value/: demonstrate_left_right_value.h
src/learnings/include/cpp11/feature_modules/module03_raii/: demonstrate_raii.h  raii_string.h
src/learnings/include/cpp11/feature_modules/module04_constructor/: demonstrate_constructor.h
src/learnings/include/cpp11/feature_modules/module05_pointer/: demonstrate_pointer.h
src/learnings/include/cpp11/feature_modules/module06_namespace/: constants.h  country.h
src/learnings/include/cpp11/feature_modules/module07_extern_c/: c_functions.h  demonstrate_extern_c.h
src/learnings/include/cpp11/feature_modules/module08_third_party/: demonstrate_third_party.h
src/learnings/resources/: README.md
src/learnings/src/c17/: demonstrates.c
src/learnings/src/c17/data_structures/dictionary/: dict_insert.c  dict_utils.c  dictionary.c
src/learnings/src/c17/feature_modules/module01_memory_alignment/: demonstrate_memory_alignment.c
src/learnings/src/c17/feature_modules/module02_data_structures/: demonstrate_data_structure_dictionary.c
src/learnings/src/c17/utils/: char_utils.c
src/learnings/src/cpp11/feature_modules/module01_range_for/: demonstrate_range_for.cpp
src/learnings/src/cpp11/feature_modules/module02_left_right_value/: demonstrate_left_right_value.cpp
src/learnings/src/cpp11/feature_modules/module03_raii/: demonstrate_raii.cpp
src/learnings/src/cpp11/feature_modules/module04_constructor/: demonstrate_constructor.cpp  my_class.cpp
src/learnings/src/cpp11/feature_modules/module05_pointer/: demonstrate_pointer.cpp
src/learnings/src/cpp11/feature_modules/module06_namespace/: country.cpp  demonstrate_namespace.cpp
src/learnings/src/cpp11/feature_modules/module07_extern_c/: c_functions.c  demonstrate_extern_c.cpp
src/learnings/src/cpp11/feature_modules/module08_third_party/: demonstrate_third_party.cpp
src/my_libs/: CMakeLists.txt
src/my_libs/src/mymath2/: CMakeLists.txt
src/my_libs/src/mymath2/include/: mymath2.h
src/my_libs/src/mymath2/src/: lib.c
